--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   <div class="container">
     <img id="logo" src="assets/caixin.svg">
     <h1>Graphics I made as a Data and Graphics Intern at Caixin Media</h1>
+    <p id="description">Caixin is China’s <span class="bold">leading financial and investigative</span> media outlet, based in Beijing.
+      <br>During the summer of 2024, I joined <span class="bold">Caixin's Data Visualization Lab</span> as a data and graphics intern.
+      <br>Throughout three months, I published <span class="bold">10 data stories</span>.
+      <br>The full stories are on the homepage.
+      <br>All graphics are made in <span class="bold">Adobe Illustrator</span></br>
+    </p>
     <div class="row">
 
       <div class="col-4">
